Donate now section complete

--- a/index.html
+++ b/index.html
@@ -32,6 +32,50 @@
         </div>
     </section>
 
+    <!-- hero section ends -->
+
+    <!-- Donate section starts -->
+
+    <section id="donate">
+        <div class="donate-desc">
+            <h1>Donate Today</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal
+                noluisse, enim
+                animal
+                noluisse, enim
+                animal
+                noluisse, enim</p>
+        </div>
+        <div class="donate-amount-area">
+            <div class="amount">
+                <p>100tk</p>
+            </div>
+            <div id="active" class="amount">
+                <p>200tk</p>
+            </div>
+            <div class="amount">
+                <p>500tk</p>
+            </div>
+            <div class="amount">
+                <p>1000tk</p>
+            </div>
+            <div class="amount">
+                <p>5000tk</p>
+            </div>
+        </div>
+        <div class="other">
+            <p>Other Amount (Taka)</p>
+            <hr>
+            <a href="#" class="cta">Donate Now</a>
+        </div>
+    </section>
+
+    <!-- End of Dontate now section  -->
+
+
+    
+
 </body>
 
 </html>
