Donate plan section complete

--- a/index.html
+++ b/index.html
@@ -73,8 +73,57 @@
 
     <!-- End of Dontate now section  -->
 
+    <!-- start of donate plan section -->
 
-    
+    <section id="plan">
+        <div class="donate-desc">
+            <h1>Our Donate Plan</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal
+                noluisse, enim
+                animal
+                noluisse, enim
+                animal
+                noluisse, enim</p>
+        </div>
+
+        <div class="plan-area">
+            <div class="plan-box">
+                <i class="fa-solid fa-bowl-food"></i>
+                <h4>Food for a family</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <!--  -->
+            <div class="plan-box" style="background: rgba(255, 89, 89, 0.1);">
+                <i class="fa-solid fa-person-shelter"></i>
+                <h4>Food for a family</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <!--  -->
+            <div class="plan-box" style="background: rgba(255, 169, 89, 0.1);">
+                <i class="fa-solid fa-book-open"></i>
+                <h4>Food for a family</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <!--  -->
+        </div>
+    </section>
+    <!-- end of  donate plan   section-->
+
+    <!-- starts of Tagline post  area -->
+
+    <section id="tagline">
+        <div class="half-area">
+            <h1>Their lives depend on your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <a href="#" class="cta">How to Contribute?</a>
+        </div>
+    </section>
 
 </body>
 
