tagline services section completed

--- a/index.html
+++ b/index.html
@@ -117,13 +117,54 @@
 
     <section id="tagline">
         <div class="half-area">
-            <h1>Their lives depend on your donation</h1>
+            <h1>Their lives depend on<br> your donation</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
-            <a href="#" class="cta">How to Contribute?</a>
+                animal noluisse, enim<br>
+                <br>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset.
+            </p>
+
+            <a href="#" class="cta" id="tag-btn">How to Contribute?</a>
+        </div>
+
+        <div class="half-area">
+            <img src="Img/donation7.jpg" alt="pic">
         </div>
     </section>
+
+    <section id="tagline">
+
+        <div class="half-area">
+            <img src="Img/tag2.png" alt="pic">
+        </div>
+        <div class="half-area">
+            <h1>Their lives depend on<br> your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim<br>
+                <br>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset.
+            </p>
+
+            <a href="#" class="cta" id="tag-btn">How to Contribute?</a>
+        </div>
+    </section>
+    <!-- end of tagline service section -->
+
+
+    <!-- start of registration video -->
+    <section id="register">
+        <div class="donate-desc">
+            <h1>Join as a volunteer</h1>
+            <p>Our main missiion is to sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal
+                noluisse, enim
+                animal
+                noluisse, enim
+                animal
+                noluisse, enim</p>
+        </div>
+    </section>
+
 
 </body>
 
