registration section completed

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
 
         <div class="half-area">
-            <img src="Img/donation7.jpg" alt="pic">
+            <img src="Img/tag1.png" alt="pic">
         </div>
     </section>
 
@@ -155,7 +155,8 @@
     <section id="register">
         <div class="donate-desc">
             <h1>Join as a volunteer</h1>
-            <p>Our main missiion is to sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+            <p>Our main missiion is to sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
+                populo
                 animal
                 noluisse, enim
                 animal
@@ -164,7 +165,49 @@
                 noluisse, enim</p>
         </div>
     </section>
+    <div class="form-bg">
+        <div class="form-area">
+            <h1>Resigter to join</h1>
+            <form>
+                <p>First name:</p>
+                <input type="text" name="fullname" placeholder="Enter your full name">
+                <p>Email address:</p>
+                <input type="email" name="email" placeholder="Enter email address"><br>
+                <!-- <label for="Gender">Gender</label><br> -->
+                <p>Gender:</p>
+                <input type="radio" id="gender" name="Gender" value="Male">
+                <label for="Male">Male</label> &nbsp;
+                <input type="radio" id="gender" name="Gender" value="Female">
+                <label for="Female">Female</label><br>
 
+                <!-- <label for="cars">Division:</label> -->
+                <p>Division</p>
+                <select id="div" name="division">
+                    <option value="Rajshahi">Rajshahi</option>
+                    <option value="khulna">khulna</option>
+                    <option value="Rangpur">Rangpur</option>
+                    <option value="barisal">barisal</option>
+                </select>
+
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+    <!-- End of registration section -->
+
+    <!-- start of subscribe -->
+
+    <section id="subscribe">
+        <div class="subs-desc">
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+
+        </div>
+        <div class="subs-box">
+
+        </div>
+    </section>
 
 </body>
 
