subscribe and footer completed

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
             <!--  -->
             <div class="plan-box" style="background: rgba(255, 89, 89, 0.1);">
                 <i class="fa-solid fa-person-shelter"></i>
-                <h4>Food for a family</h4>
+                <h4>Shelter for a family</h4>
                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
                     duis enim velit mollit.</p>
             </div>
             <!--  -->
             <div class="plan-box" style="background: rgba(255, 169, 89, 0.1);">
                 <i class="fa-solid fa-book-open"></i>
-                <h4>Food for a family</h4>
+                <h4>Education</h4>
                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
                     duis enim velit mollit.</p>
             </div>
@@ -189,7 +189,7 @@
                     <option value="barisal">barisal</option>
                 </select>
 
-                <button type="submit">Submit</button>
+                <button type="submit" class="reg-btn">Submit</button>
             </form>
         </div>
     </div>
@@ -205,10 +205,19 @@
 
         </div>
         <div class="subs-box">
-
+            <form class="subs-form">
+                <input type="email" name="email" placeholder="     Email">
+                <button type="button" class="subs-btn">subscribe</button>
+            </form>
         </div>
     </section>
+    <!-- End of subscribe section -->
 
 </body>
+
+<footer>
+    <h1>Be Humble</h1>
+    <p>❤ I’m gonna do it ❤</p>
+</footer>
 
 </html>
