imge not showing fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 <body>
 
 
-    <section id="hero">
+    <section id="hero" style=" background-image: linear-gradient(
+        360deg,
+        #131313 1%,
+        rgba(38, 38, 38, 0) 100%
+      ),
+      url(Img/donation0.jpg);">
         <div class="hero-desc">
             <h1>Let’s Help Those Who Are<br> More In Need</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
@@ -165,7 +170,7 @@
                 noluisse, enim</p>
         </div>
     </section>
-    <div class="form-bg">
+    <div class="form-bg" style=" background-image: url(Img/formbg.png);">
         <div class="form-area">
             <h1>Resigter to join</h1>
             <form>
