--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
 <body>
 
 
-    <section id="hero" style=" background-image: linear-gradient(
-        360deg,
-        #131313 1%,
-        rgba(38, 38, 38, 0) 100%
-      ),
-      url(Img/donation0.jpg);">
+    <section id="hero">
         <div class="hero-desc">
             <h1>Let’s Help Those Who Are<br> More In Need</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
