lorem ipsome removed

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
     <section id="hero">
         <div class="hero-desc">
             <h1>Let’s Help Those Who Are<br> More In Need</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
-                populorrentur, at eam falli deterruisset. No duo populorrentur, at eam falli deterruisset. No duo
-                populo.
-                animal noluisse, enim</p>
+            <p>we are here to help the affected people in world wide in any situation like climate change or any natural diseaster.Our main moto is to take your help your contributation to the affected people.</p>
             <a href="#" class="cta">Donate Now</a>
         </div>
     </section>
@@ -39,13 +36,7 @@
     <section id="donate">
         <div class="donate-desc">
             <h1>Donate Today</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal
-                noluisse, enim
-                animal
-                noluisse, enim
-                animal
-                noluisse, enim</p>
+            <p>We are the most trusted and authosrised organization. So you can immediately send donation to us so that we can use them to help the affected people right now.</p>
         </div>
         <div class="donate-amount-area">
             <div class="amount">
@@ -78,35 +69,26 @@
     <section id="plan">
         <div class="donate-desc">
             <h1>Our Donate Plan</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal
-                noluisse, enim
-                animal
-                noluisse, enim
-                animal
-                noluisse, enim</p>
+            <p>Our organisation has some planning in our work.Here is the procedures we will follow.</p>
         </div>
 
         <div class="plan-area">
             <div class="plan-box">
                 <i class="fa-solid fa-bowl-food"></i>
                 <h4>Food for a family</h4>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <p>With the help of your donations we will buy some food for them.Specialy dey food like rice,puffed rice,sweet,oil etc..</p>
             </div>
             <!--  -->
             <div class="plan-box" style="background: rgba(255, 89, 89, 0.1);">
                 <i class="fa-solid fa-person-shelter"></i>
                 <h4>Shelter for a family</h4>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <p>With the help of your money we will work foe the recovering process of their shelter.</p>
             </div>
             <!--  -->
             <div class="plan-box" style="background: rgba(255, 169, 89, 0.1);">
                 <i class="fa-solid fa-book-open"></i>
                 <h4>Education</h4>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <p>With the help of your donation we will also work in Education for them after every thing gets normal.</p>
             </div>
             <!--  -->
         </div>
@@ -118,10 +100,9 @@
     <section id="tagline">
         <div class="half-area">
             <h1>Their lives depend on<br> your donation</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim<br>
-                <br>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset.
+            <p>Natutral diseaster or any climate diseaster causes alot of harm in our regular life and also affects our
+                money,helth,livings...etc.<br>
+                <br>So , Its high time we should help them .Your donation will help them raise and recover again.
             </p>
 
             <a href="#" class="cta" id="tag-btn">How to Contribute?</a>
@@ -138,11 +119,10 @@
             <img src="Img/tag2.png" alt="pic">
         </div>
         <div class="half-area">
-            <h1>Their lives depend on<br> your donation</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim<br>
-                <br>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset.
+            <h1>They need us <br> to suvive</h1>
+            <p>As you know the situation is geeting hard for them.Its very hard time they are passing through.<br>
+                <br>So , we as a human being must help them in the current situation.We can work as a volunteer or we
+                can donate money or any work that will Contribute to eradicate their pain will be so much worthy..
             </p>
 
             <a href="#" class="cta" id="tag-btn">How to Contribute?</a>
@@ -155,14 +135,8 @@
     <section id="register">
         <div class="donate-desc">
             <h1>Join as a volunteer</h1>
-            <p>Our main missiion is to sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
-                populo
-                animal
-                noluisse, enim
-                animal
-                noluisse, enim
-                animal
-                noluisse, enim</p>
+            <p>Our main moto is to help people who is in need in this time.So we are giving oppoetunity to you to join
+                with us so that we can serve together.</p>
         </div>
     </section>
     <div class="form-bg" style=" background-image: url(Img/formbg.png);">
@@ -200,8 +174,7 @@
     <section id="subscribe">
         <div class="subs-desc">
             <h1>Get My Updates</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p>Add your email here so that you can get any further updates and notifications of our works.</p>
 
         </div>
         <div class="subs-box">
